# UAV_ws

./: .gitmodules  README.md
install/: local_setup.sh  setup.sh
install/common_msgs/include/common_msgs/msg/: input.hpp  rosidl_generator_cpp__visibility_control.hpp  state.hpp  u_traj.h  u_traj.hpp  x_traj.hpp
install/common_msgs/share/common_msgs/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/common_msgs/share/common_msgs/cmake/: ament_cmake_export_dependencies-extras.cmake  ament_cmake_export_include_directories-extras.cmake  ament_cmake_export_libraries-extras.cmake  ament_cmake_export_targets-extras.cmake  common_msgsConfig-version.cmake  common_msgsConfig.cmake  common_msgs__rosidl_generator_cExport-noconfig.cmake  common_msgs__rosidl_typesupport_cppExport.cmake  common_msgs__rosidl_typesupport_introspection_cExport.cmake  common_msgs__rosidl_typesupport_introspection_cppExport-debug.cmake  common_msgs__rosidl_typesupport_introspection_cppExport-noconfig.cmake  common_msgs__rosidl_typesupport_introspection_cppExport.cmake  export_common_msgs__rosidl_generator_cExport-debug.cmake  export_common_msgs__rosidl_generator_cExport.cmake  export_common_msgs__rosidl_generator_pyExport.cmake  export_common_msgs__rosidl_typesupport_fastrtps_cppExport-debug.cmake  export_common_msgs__rosidl_typesupport_fastrtps_cppExport.cmake  rosidl_cmake-extras.cmake  rosidl_cmake_export_typesupport_libraries-extras.cmake  rosidl_cmake_export_typesupport_targets-extras.cmake
install/common_msgs/share/common_msgs/environment/: ament_prefix_path.dsv  library_path.dsv  path.dsv  pythonpath.dsv  pythonpath.sh
install/common_msgs/share/common_msgs/msg/: Input.idl  Input.msg  State.idl  State.msg  UTraj.idl  UTraj.msg  XTraj.idl  XTraj.msg
install/grampc-d/include/grampcd/: UAV_agent_model.hpp  general_model_factory.hpp
install/grampc-d/include/grampcd/agent/: agent.hpp  async_step_selector.hpp  neighbor.hpp  step_selector.hpp  sync_step_selector.hpp
install/grampc-d/include/grampcd/comm/: communication_interface.hpp  communication_interface_central.hpp  communication_interface_local.hpp  message.hpp  message_handler.hpp
install/grampc-d/include/grampcd/coord/: coordinator.hpp
install/grampc-d/include/grampcd/info/: agent_info.hpp  communication_data.hpp  communication_info.hpp  coupling_info.hpp  optimization_info.hpp  tuning_info.hpp
install/grampc-d/include/grampcd/interface/: dmpc_interface.hpp  interface.hpp  python_interface.hpp
install/grampc-d/include/grampcd/model/: agent_model.hpp  coupling_model.hpp  (+1 more)
install/grampc-d/share/grampc-d/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/libs/include/libs/: euler1.h  eulermod2.h  f2cmod.h  grampc.h  grampc.hpp  grampc_alloc.h  grampc_fixedsize.h  grampc_init.h  grampc_macro.h  grampc_mess.h  grampc_run.h  grampc_setopt.h  grampc_setparam.h  grampc_util.h  heun2.h  probfct.h  problem_description.hpp  rodas.h  rodas_decsol_f2c.h  ruku45.h  simpson.h  trapezodial.h
install/libs/share/libs/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/libs/share/libs/cmake/: ament_cmake_export_targets-extras.cmake  grampcExport-noconfig.cmake  grampcExport.cmake  libsConfig-version.cmake  libsConfig.cmake
install/libs/share/libs/environment/: ament_prefix_path.dsv  library_path.dsv  path.dsv
install/mpc_node/lib/mpc_node/: mpc_node_exe
install/mpc_node/share/mpc_node/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/simulator_node/lib/simulator_node/: simulator_node_exe
install/simulator_node/share/simulator_node/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/test/share/test/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/uav_launch/share/uav_launch/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
log/: latest_build  latest_list
my_bag_folder/: metadata.yaml  my_bag_folder_0.db3
src/common_msgs/: CMakeLists.txt
src/common_msgs/msg/: State.msg
src/grampc-d/: CMakeLists.txt
src/grampc-d/include/grampcd/comm/: communication_interface.hpp  communication_interface_central.hpp  communication_interface_local.hpp
src/grampc-d/include/grampcd/interface/: interface.hpp  python_interface.hpp
src/grampc-d/include/grampcd/simulator/: simulator.hpp
src/grampc-d/src/: UAV_agent_model.cpp  general_model_factory.cpp
src/grampc-d/src/agent/: agent.cpp
src/grampc-d/src/comm/: communication_interface_central.cpp  communication_interface_local.cpp
src/grampc-d/src/interface/: dmpc_interface.cpp  python_interface.cpp
src/grampc-d/src/optim/: solution.cpp  solver_central.cpp
src/grampc-d/src/simulator/: simulator.cpp
src/grampc-d/src/util/: auto_tune.cpp
src/libs/: CMakeLists.txt
src/libs/libs/asio/src/asio-stamp/: asio-download-RELWITHDEBINFO.cmake  asio-download-RelWithDebInfo#.cmake
src/libs/libs/asio/tmp/: asio-gitclone.cmake
src/libs/libs/cereal/src/cereal-stamp/: cereal-download-Debug.cmake  cereal-download-RELWITHDEBINFO.cmake
src/libs/libs/cereal/tmp/: cereal-gitclone.cmake
src/libs/libs/sha/src/sha-stamp/: sha-download-Debug.cmake  sha-download-RELWITHDEBINFO.cmake  sha-gitclone-lastrun.txt
src/libs/libs/sha/tmp/: sha-gitclone.cmake
src/mpc_node/: CMakeLists.txt  package.xml
src/mpc_node/Traj/: u_input_real.txt
src/mpc_node/src/: mpc_node.cpp
src/simulator_node/: CMakeLists.txt  package.xml
src/simulator_node/src/: simulator_node.cpp
src/uav_launch/: CMakeLists.txt
src/uav_launch/launch/: uav_launch.py
(+178 files in other folders)
