<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>libs</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="yifan.zhang0215@gmail.com">evan</maintainer>
  <license>TODO: License declaration</license>
  <url type="website">http://github.com/yourusername/libs</url>
  <url type="repository">http://github.com/yourusername/libs</url>
  <url type="bugtracker">http://github.com/yourusername/libs/issues</url>
  <depend>rclcpp</depend>
  
  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
